# etl-mcp-serv

./: Dockerfile  Dockerfile.dev  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
src/: main.py
src/configs/: configs.py
src/core/: app.py
src/etl_mcp_serv/: __init__.py
src/etl_mcp_serv/configs/: __init__.py
src/etl_mcp_serv/core/: __init__.py  app.py  main.py
src/tools/: __init__.py  registry.py  tools.py
tests/: test_tools.py  test_tools_registry.py
