[project]
name = "etl-mcp-serv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "north-mcp-python-sdk @ git+ssh://git@github.com/cohere-ai/north-mcp-python-sdk.git",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]
